{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 116,
  "lineage": "0e46af39-f32e-3e44-ad13-af381ab6bd86",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:645583760972:vpc/vpc-03fb7d97e7a3cb9f2",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0fad8a4e39a113ab8",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0b2ef9264a9b31a00",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03fb7d97e7a3cb9f2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02de258230cca41f0",
            "owner_id": "645583760972"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:645583760972:security-group/sg-04a9b38311e05c1c3",
            "description": "SG principal pour RDS iddlesaur",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a9b38311e05c1c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "37.66.146.142/32"
                ],
                "description": "Autorise MySQL 3306 depuis ma machine (37.66.146.142/32)",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "iddlesaur-rds-sg",
            "name_prefix": "",
            "owner_id": "645583760972",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03fb7d97e7a3cb9f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_ingress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "A modifier car pas securise",
            "from_port": 3306,
            "id": "sgrule-2427101596",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04a9b38311e05c1c3",
            "security_group_rule_id": "sgr-047aebcdd512b3bb3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds_access",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}